Updated API client to 0.0.4
