# pkg/swagger/api/swagger.yaml
@@ -1,9 +1,9 @@
 ---
 swagger: "2.0"
 info:
-  description: "API to submit, amend, and cancel orders for my.move.mil."
-  version: "0.0.3"
-  title: "my.move.mil Orders Gateway"
+  description: "API to submit, amend, and cancel orders for move.mil."
+  version: "0.0.4"
+  title: "MyMove Orders Gateway"
   license:
     name: "MIT"
     url: "https://github.com/transcom/mymove/blob/master/LICENSE.md"
@@ -25,7 +25,9 @@ paths:
       parameters:
       - name: "ordersNum"
         in: "query"
-        description: "The Orders number as it appears on the Orders"
+        description: "Orders number, corresponding to the ORDERS number (Army), the\
+          \ CT SDN (Navy, Marines), the SPECIAL ORDER NO (Air Force), the Travel Order\
+          \ No (Coast Guard), or the Travel Authorization Number (Civilian)."
         required: false
         type: "string"
         x-exportParamName: "OrdersNum"
@@ -84,20 +86,18 @@ paths:
       summary: "Submit a new set of orders, make an amendment to an existing set of\
         \ orders, or cancel a set of orders."
       description: "Creates a Revision of a set of orders.\n\n## New Orders\nThe supplied\
-        \ Revision is considered part of a new set of Orders if the supplied ordersNum\
-        \ has never been seen before for the supplied issuingAuthority. A new UUID\
-        \ is created and associated with a new Orders, which is returned along with\
-        \ the supplied Revision.\n\n## Amended Orders\nIf the system determines that\
-        \ the supplied Revision is an amendment to an existing set of Orders, usually\
-        \ because the ordersNum already exists and the seqNum is unique, then the\
-        \ supplied Revision is added to the existing Orders.\n\nSpecifying the existing\
-        \ Orders' UUID is optional; clients are not required to remember the UUIDs\
-        \ returned with the Orders by previous calls to this API. If it is omitted,\
-        \ the system will attempt to locate the correct Orders using the ordersNum\
-        \ and issuingAuthority fields.\n\n## Canceled, Rescinded, or Revoked Orders\n\
-        To cancel, rescind, or revoke Orders, POST a new Revision with the status\
-        \ set to \"canceled\".\n\n# Errors\nIt is an error to specify an already-created\
-        \ seqNum in the provided Revision for an existing set of Orders.\n"
+        \ Revision is considered part of a new set of Orders if the combination of\
+        \ `ordersNum`, EDIPI, and `issuingAuthority` has never been seen before. A\
+        \ new UUID is created and associated with the Orders, which is returned along\
+        \ with the supplied Revision.\n\n## Amended Orders\nIf the system determines\
+        \ that the supplied Revision is an amendment to an existing set of Orders,\
+        \ then the supplied Revision is added to the existing Orders.\n\nIf you stored\
+        \ the UUID of the Orders from a previous call to this API, you have the option\
+        \ of using the `POST /orders/{uuid}` API instead. \n\n## Canceled, Rescinded,\
+        \ or Revoked Orders\nTo cancel, rescind, or revoke Orders, POST a new Revision\
+        \ with the status set to \"canceled\".\n\n# Errors\nIt is an error to specify\
+        \ an already-created seqNum in the provided Revision for an existing set of\
+        \ Orders.\n"
       operationId: "postRevision"
       consumes:
       - "application/json"
@@ -106,18 +106,24 @@ paths:
       parameters:
       - name: "ordersNum"
         in: "query"
-        description: "The Orders number as it appears on the Orders"
+        description: "Orders number, corresponding to the ORDERS number (Army), the\
+          \ CT SDN (Navy, Marines), the SPECIAL ORDER NO (Air Force), the Travel Order\
+          \ No (Coast Guard), or the Travel Authorization Number (Civilian)."
         required: true
         type: "string"
         x-exportParamName: "OrdersNum"
-      - name: "edipi"
+      - name: "memberId"
         in: "query"
-        description: "Electronic Data Interchange Personal Identifier, AKA the 10\
-          \ digit DoD ID Number of the member"
+        description: "Electronic Data Interchange Personal Identifier of the member\
+          \ (preferred). If the member's EDIPI is unknown, then the Social Security\
+          \ Number may be provided instead. The Orders Gateway will then fetch the\
+          \ member's EDIPI using DMDC's Identity Web Services. Calls using the 9 digit\
+          \ SSN instead of the 10 digit EDIPI will take longer to respond due to the\
+          \ additional overhead.\n"
         required: true
         type: "string"
-        pattern: "^\\d{10}$"
-        x-exportParamName: "Edipi"
+        pattern: "^\\d{9}\\d?$"
+        x-exportParamName: "MemberId"
       - name: "issuingAuthority"
         in: "query"
         description: "Name of the Issuing Authority of the Orders."
@@ -236,29 +242,25 @@ definitions:
           \ M7000213CTB28DZ (Marines), AJ-063322 (Air Force), 1214G85PRAAGK000 (Coast\
           \ Guard), PS8D000025 (Civilian)"
         description: "Orders number. Supposed to be unique, but in practice uniqueness\
-          \ is not guaranteed for all branches of service.\n\n## Army\nTypically found\
-          \ in the upper-left hand corner of printed orders.\n\n## Navy\nCorresponds\
-          \ to a transformation (see below) of the BUPERS Orders number, which is\
-          \ originally formatted as \"{Julian Day of the year (from 1 to 366)}{last\
-          \ digit of the year} {xxx-xx-xxxx SSN}\". It would be unique (because of\
-          \ the SSN), except that it's possible for a set of orders to be cut on the\
-          \ same day 10 years later for the same sailor, resulting in a collision.\n\
-          \nOn printed orders, this is typically the first line after \"RMKS/\".\n\
-          \n### Transformation\nBecause the BUPERS Orders Number contains PII (the\
-          \ SSN) and could potentially not be unique (because it only allows a single\
-          \ digit for the year), this API expects the Orders number to be reformatted\
-          \ as \"{4 digit year}{2 digit month}{2 digit day}-{EDIPI}\". The full 4\
-          \ digit year can be found in the dateIssued field of the first revision,\
-          \ while the EDIPI can be copied from the edipi field.\n\n## Marine Corps\n\
-          Corresponds to the CT (Commercial Travel) SDN. On Web Orders, the CT SDN\
-          \ is found in the table at the bottom, in the last column of the row that\
-          \ begins with \"Travel\".\n\nNo-cost moves do not have a CT SDN (because\
-          \ they involve no travel). Without a CT SDN, USMC Orders have nothing to\
-          \ use for the unique Orders number, but such Orders won't authorize any\
-          \ PCS expenses either, so they do not need to be submitted to this API.\n\
-          \n## Air Force\nCorresponds to the Special Order number. On AF Form 899,\
-          \ the \"SPECIAL ORDERS NO\" is found in box 27.\n\n## Coast Guard\nCorresponds\
-          \ to the Travel Order No.\n\n## Civilian\nCorresponds to the Travel Authorization\
+          \ is not guaranteed for all branches of service.\n\n# Army\nTypically found\
+          \ in the upper-left hand corner of printed orders.\n\n# Navy\nCorresponds\
+          \ to the CT (Commercial Travel) SDN. On printed orders, this is found on\
+          \ the SDN line in the `------- ACCOUNTING DATA -------` section in the `PCS\
+          \ ACCOUNTING DATA` paragraph.\n\nThe BUPERS Orders number is not suitable,\
+          \ because it includes the sailor's full SSN, and the included four digit\
+          \ date code could repeat for a sailor if he or she gets orders exactly 10\
+          \ years apart.\n\nNo-cost moves do not have a CT SDN, because they involve\
+          \ no travel. Without a CT SDN, USN Orders have nothing to use for the Orders\
+          \ number. Such Orders won't authorize any PCS expenses either, so they do\
+          \ not need to be submitted to this API.\n\n# Marine Corps\nCorresponds to\
+          \ the CT (Commercial Travel) SDN. On Web Orders, the CT SDN is found in\
+          \ the table at the bottom, in the last column of the row that begins with\
+          \ \"Travel\".\n\nNo-cost moves do not have a CT SDN, because they involve\
+          \ no travel. Without a CT SDN, USMC Orders have nothing to use for the Orders\
+          \ number. Such Orders won't authorize any PCS expenses either, so they do\
+          \ not need to be submitted to this API.\n\n# Air Force\nCorresponds to the\
+          \ SPECIAL ORDER NO, found in box 27 on AF Form 899.\n\n# Coast Guard\nCorresponds\
+          \ to the Travel Order No.\n\n# Civilian\nCorresponds to the Travel Authorization\
           \ Number.\n"
       edipi:
         type: "string"
@@ -763,8 +765,7 @@ definitions:
           \ that uniquely identifies each United States Department of Defense entity.\
           \ Used in Army, Air Force, and Navy orders.\n\nNote that the Navy has the\
           \ habit of omitting the leading character, which is always \"N\" for them.\n"
-        minLength: 6
-        maxLength: 6
+        pattern: "^[A-Z][A-Z0-9]{5}$"
       city:
         type: "string"
         description: "May be FPO or APO for OCONUS commands."
