# pkg/swagger/orders_api.go
@@ -1,9 +1,9 @@
 /*
- * my.move.mil Orders Gateway
+ * MyMove Orders Gateway
  *
- * API to submit, amend, and cancel orders for my.move.mil.
+ * API to submit, amend, and cancel orders for move.mil.
  *
- * API version: 0.0.3
+ * API version: 0.0.4
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 
@@ -95,7 +95,7 @@ func (a *OrdersApiService) GetOrders(ctx context.Context, uuid string) (Orders, 
  Returns all orders that match all of the supplied parameters. At least one query parameter must be provided. 
  * @param ctx context.Context for authentication, logging, tracing, etc.
  @param optional (nil or map[string]interface{}) with one or more of:
-     @param "ordersNum" (string) The Orders number as it appears on the Orders
+     @param "ordersNum" (string) Orders number, corresponding to the ORDERS number (Army), the CT SDN (Navy, Marines), the SPECIAL ORDER NO (Air Force), the Travel Order No (Coast Guard), or the Travel Authorization Number (Civilian).
      @param "edipi" (string) Electronic Data Interchange Personal Identifier, AKA the 10 digit DoD ID Number of the member
      @param "latestOnly" (bool) If true, look only at the latest Revision (by seqNum) of any set of Orders when applying the other Revision-specific parameters. If false, search all Revisions.  Defaults to false if omitted. 
      @param "status" (string) Return only Orders where the status of the latest Revision of the Orders matches the supplied status.
@@ -191,14 +191,14 @@ func (a *OrdersApiService) IndexOrders(ctx context.Context, localVarOptionals ma
 }
 
 /* OrdersApiService Submit a new set of orders, make an amendment to an existing set of orders, or cancel a set of orders.
- Creates a Revision of a set of orders.  ## New Orders The supplied Revision is considered part of a new set of Orders if the supplied ordersNum has never been seen before for the supplied issuingAuthority. A new UUID is created and associated with a new Orders, which is returned along with the supplied Revision.  ## Amended Orders If the system determines that the supplied Revision is an amendment to an existing set of Orders, usually because the ordersNum already exists and the seqNum is unique, then the supplied Revision is added to the existing Orders.  Specifying the existing Orders&#39; UUID is optional; clients are not required to remember the UUIDs returned with the Orders by previous calls to this API. If it is omitted, the system will attempt to locate the correct Orders using the ordersNum and issuingAuthority fields.  ## Canceled, Rescinded, or Revoked Orders To cancel, rescind, or revoke Orders, POST a new Revision with the status set to \&quot;canceled\&quot;.  # Errors It is an error to specify an already-created seqNum in the provided Revision for an existing set of Orders. 
+ Creates a Revision of a set of orders.  ## New Orders The supplied Revision is considered part of a new set of Orders if the combination of &#x60;ordersNum&#x60;, EDIPI, and &#x60;issuingAuthority&#x60; has never been seen before. A new UUID is created and associated with the Orders, which is returned along with the supplied Revision.  ## Amended Orders If the system determines that the supplied Revision is an amendment to an existing set of Orders, then the supplied Revision is added to the existing Orders.  If you stored the UUID of the Orders from a previous call to this API, you have the option of using the &#x60;POST /orders/{uuid}&#x60; API instead.   ## Canceled, Rescinded, or Revoked Orders To cancel, rescind, or revoke Orders, POST a new Revision with the status set to \&quot;canceled\&quot;.  # Errors It is an error to specify an already-created seqNum in the provided Revision for an existing set of Orders. 
  * @param ctx context.Context for authentication, logging, tracing, etc.
- @param ordersNum The Orders number as it appears on the Orders
- @param edipi Electronic Data Interchange Personal Identifier, AKA the 10 digit DoD ID Number of the member
+ @param ordersNum Orders number, corresponding to the ORDERS number (Army), the CT SDN (Navy, Marines), the SPECIAL ORDER NO (Air Force), the Travel Order No (Coast Guard), or the Travel Authorization Number (Civilian).
+ @param memberId Electronic Data Interchange Personal Identifier of the member (preferred). If the member&#39;s EDIPI is unknown, then the Social Security Number may be provided instead. The Orders Gateway will then fetch the member&#39;s EDIPI using DMDC&#39;s Identity Web Services. Calls using the 9 digit SSN instead of the 10 digit EDIPI will take longer to respond due to the additional overhead. 
  @param issuingAuthority Name of the Issuing Authority of the Orders.
  @param revision 
  @return Orders*/
-func (a *OrdersApiService) PostRevision(ctx context.Context, ordersNum string, edipi string, issuingAuthority string, revision Revision) (Orders,  *http.Response, error) {
+func (a *OrdersApiService) PostRevision(ctx context.Context, ordersNum string, memberId string, issuingAuthority string, revision Revision) (Orders,  *http.Response, error) {
 	var (
 		localVarHttpMethod = strings.ToUpper("Post")
 		localVarPostBody interface{}
@@ -216,7 +216,7 @@ func (a *OrdersApiService) PostRevision(ctx context.Context, ordersNum string, e
 
 
 	localVarQueryParams.Add("ordersNum", parameterToString(ordersNum, ""))
-	localVarQueryParams.Add("edipi", parameterToString(edipi, ""))
+	localVarQueryParams.Add("memberId", parameterToString(memberId, ""))
 	localVarQueryParams.Add("issuingAuthority", parameterToString(issuingAuthority, ""))
 	// to determine the Content-Type header
 	localVarHttpContentTypes := []string{ "application/json",  }
